--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 body{
     font-family: 'Lato', sans-serif;
-    font-size: 1.6rem;
+    font-size: 1rem;
     line-height: 2;
     background-color: white center center repeat;
     margin: 0;
@@ -449,5 +449,19 @@ font-family: Arial, Helvetica, sans-serif;
 .button-22:hover {
   background-color: #1C84FF;
 }
+.navbar-light .navbar-nav .nav-link {
+  color: rgb(12 0 0);
+}
+/*
+.dropdown-menu {
+  font-size: 2rem;;
+}
+.form-control {
+  font-size: 2rem;
+}
 
+*/
+.bg-light {
+  background-color: #00cdab2b!important;
+}
 /*Register*/
