--- a/css/styles.css
+++ b/css/styles.css
@@ -465,3 +465,4 @@ font-family: Arial, Helvetica, sans-serif;
   background-color: #00cdab2b!important;
 }
 /*Register*/
+.collapse{display:inline};
